<resources>
    <string name="app_name">Time Switch</string>
    <string name="title_activity_today">Today\'s Entries</string>
    <string name="title_activity_report_week">Entries By Week</string>
    <string name="title_activity_likely_words">Likely Words</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_corrections">Corrections</string>
    <string name="title_activity_errors">Errors</string>

    <string name="action_settings">Settings</string>

    <string name="main_button_create">Create Notification</string>
    <string name="main_button_cancel">Cancel Notification</string>
</resources>
